WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277554
Show HTTPS-Only browsing warning
https://bugs.webkit.org/show_bug.cgi?id=277554
Summary
Show HTTPS-Only browsing warning
Matthew Finkel
Reported
2024-08-02 09:06:44 PDT
Show HTTPS-Only browsing warning
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-02 09:06:56 PDT
<
rdar://problem/133067048
>
Matthew Finkel
Comment 2
2024-08-05 06:16:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31716
EWS
Comment 3
2024-08-06 14:13:30 PDT
Committed
281914@main
(81cb1ae04476): <
https://commits.webkit.org/281914@main
> Reviewed commits have been landed. Closing PR #31716 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug